make_flib11_clang++.log
cd .. && mkdir libLinux
cd ../libLinux && mkdir static
cd ../libLinux && cd static && mkdir Graphics
cd ../libLinux && cd static && mkdir System
cd ../libLinux && cd static && mkdir Window
cd ../libLinux && cd static && mkdir GL
cd ../libLinux && cd static && mkdir Gui
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG  -DFRONTIER_MISSING_IMPL_NO_WARNING -I ../include -c Graphics/Mesh.cpp -o ../libLinux/static/Graphics/Mesh.o 
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG  -DFRONTIER_MISSING_IMPL_NO_WARNING -I ../include -c Graphics/ShaderManager.cpp -o ../libLinux/static/Graphics/ShaderManager.o 
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG  -DFRONTIER_MISSING_IMPL_NO_WARNING -I ../include -c Graphics/FloatTexture.cpp -o ../libLinux/static/Graphics/FloatTexture.o 
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG  -DFRONTIER_MISSING_IMPL_NO_WARNING -I ../include -c Graphics/Color.cpp -o ../libLinux/static/Graphics/Color.o 
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG  -DFRONTIER_MISSING_IMPL_NO_WARNING -I ../include -c Graphics/Image.cpp -o ../libLinux/static/Graphics/Image.o 
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG  -DFRONTIER_MISSING_IMPL_NO_WARNING -I ../include -c Graphics/FontRenderer.cpp -o ../libLinux/static/Graphics/FontRenderer.o 
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG  -DFRONTIER_MISSING_IMPL_NO_WARNING -I ../include -c Graphics/TextureAtlas.cpp -o ../libLinux/static/Graphics/TextureAtlas.o 
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG  -DFRONTIER_MISSING_IMPL_NO_WARNING -I ../include -c Graphics/IndexHolder.cpp -o ../libLinux/static/Graphics/IndexHolder.o 
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG  -DFRONTIER_MISSING_IMPL_NO_WARNING -I ../include -c Graphics/DrawCall.cpp -o ../libLinux/static/Graphics/DrawCall.o 
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG  -DFRONTIER_MISSING_IMPL_NO_WARNING -I ../include -c Graphics/ShaderSource.cpp -o ../libLinux/static/Graphics/ShaderSource.o 
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG  -DFRONTIER_MISSING_IMPL_NO_WARNING -I ../include -c Graphics/Metrics.cpp -o ../libLinux/static/Graphics/Metrics.o 
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG  -DFRONTIER_MISSING_IMPL_NO_WARNING -I ../include -c Graphics/RenderStates.cpp -o ../libLinux/static/Graphics/RenderStates.o 
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG  -DFRONTIER_MISSING_IMPL_NO_WARNING -I ../include -c Graphics/SpriteManager.cpp -o ../libLinux/static/Graphics/SpriteManager.o 
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG  -DFRONTIER_MISSING_IMPL_NO_WARNING -I ../include -c Graphics/TextureConvolution.cpp -o ../libLinux/static/Graphics/TextureConvolution.o 
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG  -DFRONTIER_MISSING_IMPL_NO_WARNING -I ../include -c Graphics/FloatAttributeUpdater.cpp -o ../libLinux/static/Graphics/FloatAttributeUpdater.o 
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG  -DFRONTIER_MISSING_IMPL_NO_WARNING -I ../include -c Graphics/FrameBuffer.cpp -o ../libLinux/static/Graphics/FrameBuffer.o 
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG  -DFRONTIER_MISSING_IMPL_NO_WARNING -I ../include -c Graphics/Texture.cpp -o ../libLinux/static/Graphics/Texture.o 
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG  -DFRONTIER_MISSING_IMPL_NO_WARNING -I ../include -c Graphics/Transformable.cpp -o ../libLinux/static/Graphics/Transformable.o 
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG  -DFRONTIER_MISSING_IMPL_NO_WARNING -I ../include -c Graphics/DepthTexture.cpp -o ../libLinux/static/Graphics/DepthTexture.o 
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG  -DFRONTIER_MISSING_IMPL_NO_WARNING -I ../include -c Graphics/Shader.cpp -o ../libLinux/static/Graphics/Shader.o 
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG  -DFRONTIER_MISSING_IMPL_NO_WARNING -I ../include -c Graphics/AttributeRef.cpp -o ../libLinux/static/Graphics/AttributeRef.o 
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG  -DFRONTIER_MISSING_IMPL_NO_WARNING -I ../include -c Graphics/Drawable.cpp -o ../libLinux/static/Graphics/Drawable.o 
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG  -DFRONTIER_MISSING_IMPL_NO_WARNING -I ../include -c Graphics/DrawData.cpp -o ../libLinux/static/Graphics/DrawData.o 
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG  -DFRONTIER_MISSING_IMPL_NO_WARNING -I ../include -c Graphics/Buffer.cpp -o ../libLinux/static/Graphics/Buffer.o 
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG  -DFRONTIER_MISSING_IMPL_NO_WARNING -I ../include -c Graphics/Font.cpp -o ../libLinux/static/Graphics/Font.o 
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG  -DFRONTIER_MISSING_IMPL_NO_WARNING -I ../include -c Graphics/Glyph.cpp -o ../libLinux/static/Graphics/Glyph.o 
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG  -DFRONTIER_MISSING_IMPL_NO_WARNING -I ../include -c Graphics/VertexState.cpp -o ../libLinux/static/Graphics/VertexState.o 
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG  -DFRONTIER_MISSING_IMPL_NO_WARNING -I ../include -c Graphics/AssocPoint.cpp -o ../libLinux/static/Graphics/AssocPoint.o 
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG  -DFRONTIER_MISSING_IMPL_NO_WARNING -I ../include -c Graphics/CubeTexture.cpp -o ../libLinux/static/Graphics/CubeTexture.o 
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG  -DFRONTIER_MISSING_IMPL_NO_WARNING -I ../include -c Graphics/Attribute.cpp -o ../libLinux/static/Graphics/Attribute.o 
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG  -DFRONTIER_MISSING_IMPL_NO_WARNING -I ../include -c Graphics/GlObject.cpp -o ../libLinux/static/Graphics/GlObject.o 
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG  -DFRONTIER_MISSING_IMPL_NO_WARNING -I ../include -c Graphics/FixedShaderManager.cpp -o ../libLinux/static/Graphics/FixedShaderManager.o 
Graphics/Font.cpp:234:32: error: moving a temporary object prevents copy elision [-Werror,-Wpessimizing-move]
                ret.m_sharedData->renderer = std::move(m_sharedData->renderer.createHardCopy());
                                             ^
Graphics/Font.cpp:234:32: note: remove std::move call here
                ret.m_sharedData->renderer = std::move(m_sharedData->renderer.createHardCopy());
                                             ^~~~~~~~~~                                       ~
Graphics/Font.cpp:307:36: error: moving a temporary object prevents copy elision [-Werror,-Wpessimizing-move]
                                fg::Image *img = new fg::Image(std::move(renderGlyph(c,style,&leftdown)));
                                                               ^
Graphics/Font.cpp:307:36: note: remove std::move call here
                                fg::Image *img = new fg::Image(std::move(renderGlyph(c,style,&leftdown)));
                                                               ^~~~~~~~~~                              ~
Graphics/Font.cpp:331:19: error: moving a temporary object prevents copy elision [-Werror,-Wpessimizing-move]
                        Image sdfImg = std::move(renderImg.convertToSDF(10,[](Color c){return c.a > 127;},0));
                                       ^
Graphics/Font.cpp:331:19: note: remove std::move call here
                        Image sdfImg = std::move(renderImg.convertToSDF(10,[](Color c){return c.a > 127;},0));
                                       ^~~~~~~~~~                                                           ~
Graphics/Font.cpp:332:25: error: moving a temporary object prevents copy elision [-Werror,-Wpessimizing-move]
                        Image scaledSDFImg = std::move(sdfImg.scale(sdfImg.getSize()*.3));
                                             ^
Graphics/Font.cpp:332:25: note: remove std::move call here
                        Image scaledSDFImg = std::move(sdfImg.scale(sdfImg.getSize()*.3));
                                             ^~~~~~~~~~                                 ~
4 errors generated.
makefile:52: recipe for target '../libLinux/static/Graphics/Font.o' failed
make: *** [../libLinux/static/Graphics/Font.o] Error 1
make: *** Waiting for unfinished jobs....
